add: diagrama de clases

--- a/IdePascal/pom.xml
+++ b/IdePascal/pom.xml
@@ -52,5 +52,11 @@
             <artifactId>cup_runtime</artifactId>
             <version>11b-20160615</version>
         </dependency>
+                <!-- https://mvnrepository.com/artifact/guru.nidi/graphviz-java -->
+        <dependency>
+            <groupId>guru.nidi</groupId>
+            <artifactId>graphviz-java</artifactId>
+            <version>0.18.1</version>
+        </dependency>
     </dependencies>
 </project>
